# JobSeek

./: .envrc  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  IMPLEMENTATION_REPORT.md  LEGAL.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  VIRTUALENV.md  demo.py  pyproject.toml  requirements.txt  setup.py
examples/: basic_usage.py  example_companies.py
jobseek/: __init__.py  base_scraper.py  cli.py  formatter.py  models.py
jobseek/adapters/: __init__.py
jobseek/adapters/sinks/: __init__.py  console.py  csvsink.py
jobseek/adapters/sources/: __init__.py  greenhouse.py
jobseek/app/: config.py  pipeline.py
jobseek/cli/: main.py
jobseek/domain/: __init__.py  models.py
jobseek/scrapers/: __init__.py  greenhouse.py  lever.py  workday.py
jobseek/tests/: test_pipeline.py
tests/: test_base_scraper.py  test_models.py  test_pipeline.py
